<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_up_time"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/up_time"
        android:textSize="@dimen/big4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_cpu_temperature"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/cpu_temperature"
        android:textSize="@dimen/big4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_up_time" />

    <TextView
        android:id="@+id/tv_cpu_utilization"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/cpu_utilization"
        android:textSize="@dimen/big4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cpu_temperature" />
</android.support.constraint.ConstraintLayout>
