<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black5"
        app:layout_constraintBottom_toTopOf="@+id/tv_enjoy_sdk_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_enjoy_sdk_version"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/enjoy_sdk_version"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_enjoy_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_enjoy_version"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/enjoy_version"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_enjoy_compatible_android_sdk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_enjoy_compatible_android_sdk"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/enjoy_android_sdk"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
